--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     
     <section id="about" data-aos="fade-up">
         <h2>About Me</h2>
-        <img src="C:\Users\ABC\Desktop\portfolio\images\Myphoto.jpg" alt="A photo of Jezeer Ahamed" class="profile-pic">
+        <img src="images\Myphoto.jpg" alt="A photo of Jezeer Ahamed" class="profile-pic">
         <p>Hi, I’m Jezeer Ahamed, a passionate data analyst and A-level Physics teacher with over 7 years of experience. I specialize in data-driven insights, sports data analytics, and leveraging my technical skills to solve complex problems. I’m always looking for opportunities to grow, collaborate, and help others understand the power of data.</p>
         <p>With a strong background in physics, chemistry, and mathematics, I have a solid foundation in analytical thinking, which allows me to approach data from multiple perspectives. I’m currently focused on expanding my knowledge of AI and pursuing freelance opportunities in the tech industry.</p>
         <p>In my free time, I enjoy sports, particularly badminton, and I’m excited to merge my passion for data analytics with my love of sports.</p>
@@ -90,7 +90,7 @@
         <h2>Projects</h2>
         <div class="project-grid">
             <div class="project-card">
-                <img src="C:\Users\ABC\Desktop\portfolio\images\project1.png" alt="Project 1" class="project-image" />
+                <img src="images\project1.png" alt="Project 1" class="project-image" />
                 <div class="project-content">
                     <h3>Daily Mood Tracker</h3>
                     <p>A web app to track your daily mood and provide insights for a balanced life.</p>
@@ -98,7 +98,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="C:\Users\ABC\Desktop\portfolio\images\project2.png" alt="Project 2" class="project-image" />
+                <img src="images\project2.png" alt="Project 2" class="project-image" />
                 <div class="project-content">
                     <h3>Personal Assistant App</h3>
                     <p>An AI-powered app to help schedule your work and manage daily routines efficiently.</p>
@@ -106,7 +106,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="C:\Users\ABC\Desktop\portfolio\images\project3.png" alt="Project 3" class="project-image" />
+                <img src="images\project3.png" alt="Project 3" class="project-image" />
                 <div class="project-content">
                     <h3>Portfolio Website</h3>
                     <p>A stylish personal portfolio website to showcase projects and attract clients.</p>
